<package>
  <name>octomap_server_ext</name>
  <version>0.1.0</version>
  <description>
    octomap_server_ext extends octomap_server with computation of number of
    occupied and free voxels, retrieval of dense 3D slices, collision checking
    etc.
  </description>
  <author>Benjamin Hepp</author>
  <maintainer email="benjamin.hepp@posteo.de">Benjamin Hepp</maintainer>
  <license>BSD</license>
<!--  <url>http://www.ros.org/wiki/octomap_server</url>
  <url type="bugtracker">https://github.com/OctoMap/octomap_mapping/issues</url>
  <url type="repository">https://github.com/OctoMap/octomap_mapping</url>-->
  
  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>octomap_ext</build_depend>
  <build_depend>octomap_ros</build_depend>
  <build_depend>octomap_msgs</build_depend>
  <build_depend>octomap_ext_ros</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>libpcl-all-dev</build_depend>

   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
   <run_depend>visualization_msgs</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>pcl_ros</run_depend>
   <run_depend>pcl_conversions</run_depend>
   <run_depend>nav_msgs</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>std_srvs</run_depend>
   <run_depend>octomap_ext</run_depend>
   <run_depend>octomap_ros</run_depend>
   <run_depend>octomap_msgs</run_depend>
   <run_depend>octomap_ext_ros</run_depend>
   <run_depend>dynamic_reconfigure</run_depend>
   <run_depend>nodelet</run_depend>
   <run_depend>message_generation</run_depend>
   <run_depend>libpcl-all</run_depend>
 
</package>


